remove buttons from header, fix overlapping content by header

--- a/additional_style.css
+++ b/additional_style.css
@@ -142,7 +142,7 @@ body.dabody .da-field-container-note .col-md-12 p {
   margin-bottom: 0 !important;
 }
 
-body.dabody .navbar .fixed-top {
+body.dabody .fixed-top {
   position: sticky !important;
 }
 
